--- a/src/index.html
+++ b/src/index.html
@@ -18,7 +18,7 @@ var circles = d3.range(5).map(function(i) {
     return {index: 0, x:100, y:200};
   }
   else if(i==1){
-    return {index: 1, x:200, y:100};
+    return {index: 1, x:800, y:200};
   }
   else if(i==2){
     return {index: 2, x:400, y:100};
@@ -27,12 +27,12 @@ var circles = d3.range(5).map(function(i) {
     return {index: 3, x:300, y:300};
   }
   else if(i==4) {
-    return {index: 4, x:800, y:200};
+    return {index: 4, x:200, y:100};
   }
 });
 
 var color = d3.scaleOrdinal()
-    .range(d3.schemeCategory20);
+    .range(d3.schemeCategory20b);
 
 render();
 
@@ -69,7 +69,7 @@ function dragsubject() {
       circle,
       subject;
 
-  for (i = 0; i < n; ++i) {
+  for (i = 2; i < 5; ++i) {
     circle = circles[i];
     dx = d3.event.x - circle.x;
     dy = d3.event.y - circle.y;
@@ -80,15 +80,9 @@ function dragsubject() {
 }
 
 function dragstarted() {
-  if(circles.indexOf(d3.event.subject)==0 || circle.indexOf(d3.event.subject)==4)
-  {
-    break;
-  }
-  else{
     circles.splice(circles.indexOf(d3.event.subject), 1);
     circles.push(d3.event.subject);
     d3.event.subject.active = true;
-  }
 }
 
 function dragged() {
@@ -99,6 +93,7 @@ function dragged() {
 function dragended() {
   d3.event.subject.active = false;
 }
+
 
 
 </script>
